you can input something!

--- a/PlayGround/ClientApp/src/app/app.component.html
+++ b/PlayGround/ClientApp/src/app/app.component.html
@@ -6,14 +6,20 @@
   </div>
 </div>
 
-<li *ngFor="let item of messages">
-    {{item.msg}}
-</li>
+<div class="msg-info">
+  <div class="messages">
+    <li *ngFor="let item of messages">
+      {{item.msg}}
+    </li>
+  </div>
+</div>
 
 <div class="input-area">
   <div class="input-info">
-      Message:
+    Message:
   </div>
-  <input type="text">
-
+  <input [(ngModel)]="inputMsg">
+  <div class="send" (click)="addMessage()">
+      send
+  </div>
 </div>
