--- a/PlayGround/ClientApp/src/app/app.component.css
+++ b/PlayGround/ClientApp/src/app/app.component.css
@@ -12,6 +12,30 @@
     font-weight: bold;
 }
 
+.msg-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+}
+
+.messages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:400px;
+    border-radius: .5em;
+    border-color: gray;
+    border-style: solid;
+    padding: 1em;
+}
+.messages li{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    padding: .3em;
+}
 
 .input-area{
     display: flex;
@@ -26,4 +50,19 @@
     border-radius: .2em;
     border-style: solid;
     border-color: gray;
+}
+
+.input-area .send{
+    cursor: pointer;
+    display: flex;
+    padding: .2em;
+    border-radius: .3em;
+    border-style: solid;
+    border-color: gray;
+    margin-left: .5em;
+}
+
+.input-area .send:hover{
+    background-color: lightgray;
+    color: white;
 }
