--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.html
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.html
@@ -1,3 +1,17 @@
-<p>
-  message-list works!
-</p>
+<div class="msg-info">
+  <div class="messages">
+    <li *ngFor="let item of messages">
+      {{item.msg}}
+    </li>
+  </div>
+</div>
+
+<div class="input-area">
+  <div class="input-info">
+    Message:
+  </div>
+  <input [(ngModel)]="inputMsg">
+  <div class="send" (click)="addMessage()">
+      send
+  </div>
+</div>
