add a post message!

--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.html
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.html
@@ -10,8 +10,8 @@
   <div class="input-info">
     Message:
   </div>
-  <input [(ngModel)]="inputMsg">
-  <div class="send" (click)="addMessage()">
+  <input #msg>
+  <div class="send" (click)="add(msg.value); msg.value='';">
       send
   </div>
 </div>
