delete can success

--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.html
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.html
@@ -2,6 +2,9 @@
   <div class="messages">
     <li *ngFor="let item of messages">
       {{item.msg}}
+      <button (click)="delete(item)">
+         Delete
+      </button>
     </li>
   </div>
 </div>
