--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.css
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.css
@@ -1,54 +1,71 @@
-.msg-info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
+.msg-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
 }
 
 .messages {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:400px;
-    border-radius: .5em;
-    border-color: gray;
-    border-style: solid;
-    padding: 1em;
-}
-.messages li{
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    padding: .3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  border-radius: .5em;
+  border-color: gray;
+  border-style: solid;
+  padding: 1em;
 }
 
-.input-area{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
+.messages li {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  padding: .3em;
 }
 
-.input-area input{
-    font-size: 1.3em;
-    border-radius: .2em;
-    border-style: solid;
-    border-color: gray;
+.messages button {
+  cursor: pointer;
+  display: flex;
+  background-color: #fff;
+  padding: .2em;
+  border-radius: .3em;
+  border-style: solid;
+  border-color: gray;
+  margin-left: .5em;
 }
 
-.input-area .send{
-    cursor: pointer;
-    display: flex;
-    padding: .2em;
-    border-radius: .3em;
-    border-style: solid;
-    border-color: gray;
-    margin-left: .5em;
+.messages button:hover {
+  background-color: lightgray;
+  color: white;
 }
 
-.input-area .send:hover{
-    background-color: lightgray;
-    color: white;
+.input-area {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+}
+
+.input-area input {
+  font-size: 1.3em;
+  border-radius: .2em;
+  border-style: solid;
+  border-color: gray;
+}
+
+.input-area .send {
+  cursor: pointer;
+  display: flex;
+  padding: .2em;
+  border-radius: .3em;
+  border-style: solid;
+  border-color: gray;
+  margin-left: .5em;
+}
+
+.input-area .send:hover {
+  background-color: lightgray;
+  color: white;
 }
