--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.css
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.css
@@ -1,3 +1,7 @@
+.content {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 .msg-info {
   display: flex;
   align-items: center;
@@ -18,9 +22,9 @@
 }
 
 .messages li {
+  width: 200px;
   display: flex;
-  align-items: center;
-  justify-items: center;
+  justify-content: space-between;
   padding: .3em;
 }
 
@@ -48,11 +52,16 @@
   padding: 1em;
 }
 
+.input-info {
+    margin-right: .2em;
+}
+
 .input-area input {
   font-size: 1.3em;
   border-radius: .2em;
   border-style: solid;
   border-color: gray;
+  padding-left: .2em;
 }
 
 .input-area .send {
