--- a/PlayGround/ClientApp/src/app/message-list/message-list.component.html
+++ b/PlayGround/ClientApp/src/app/message-list/message-list.component.html
@@ -1,20 +1,24 @@
-<div class="msg-info">
-  <div class="messages">
-    <li *ngFor="let item of messages">
-      {{item.msg}}
-      <button (click)="delete(item)">
-         Delete
-      </button>
-    </li>
+<div class="content">
+  <div class="msg-info">
+    <div class="messages">
+      <li *ngFor="let item of messages">
+        <div class="item-msg">
+          {{item.msg}}
+        </div>
+        <button (click)="delete(item)">
+           Delete
+        </button>
+      </li>
+    </div>
   </div>
-</div>
-
-<div class="input-area">
-  <div class="input-info">
-    Message:
-  </div>
-  <input #msg>
-  <div class="send" (click)="add(msg.value); msg.value='';">
-      send
+  
+  <div class="input-area">
+    <div class="input-info">
+      Message:
+    </div>
+    <input #msg>
+    <div class="send" (click)="add(msg.value); msg.value='';">
+        send
+    </div>
   </div>
 </div>
