--- a/PlayGround/ClientApp/src/app/app.component.css
+++ b/PlayGround/ClientApp/src/app/app.component.css
@@ -5,7 +5,7 @@
     font-size: 2em;
     align-items: center;
     justify-content: center;
-    background-color: #70C4C7;
+    background-color: #88CCF1;
     padding: .3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
