--- a/PlayGround/ClientApp/src/app/app.component.css
+++ b/PlayGround/ClientApp/src/app/app.component.css
@@ -1,4 +1,6 @@
-
+.content {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 .welcome-info{
     display: flex;
     flex-direction: row;
