--- a/PlayGround/ClientApp/src/app/login/login.component.css
+++ b/PlayGround/ClientApp/src/app/login/login.component.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 5em;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .login-form{
     display: flex;
@@ -18,7 +19,25 @@
     font-size: 1.5em;
 }
 
-.login-form input{
-    font-size: .8em;
-    width: 70%;
+.login-form .login-input input{
+    border-radius: .3em;
+    border: solid;
+    border-width: .1em;
+    padding-left: 5px;
+    font-size: 1em;
+}
+
+.login-form button{
+    margin-top: .5em;
+    font-size: 1em;
+    background-color: #fff;
+    border: solid;
+    border-color: #88CCF1;
+    border-radius: .3em;
+}
+
+.login-form button:hover{
+    cursor: pointer;
+    background-color: #306BAC;
+    color: #fff;
 }
