not complete but can hit api!

--- a/PlayGround/ClientApp/src/app/login/login.component.html
+++ b/PlayGround/ClientApp/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <form (ngSubmit)="onSubmit();" class="login-form" #heroForm="ngForm">
+    <form (ngSubmit)="onSubmit();" class="login-form">
       <div class="login-input">
         <div>Account:</div>
         <input #account name="account" [(ngModel)]="user.account">
