--- a/PlayGround/ClientApp/src/app/login/login.component.css
+++ b/PlayGround/ClientApp/src/app/login/login.component.css
@@ -1,52 +1,54 @@
-.content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 5em;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+.login-component {
+  margin: 0 auto;
+  width: 100%;
+  min-height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.login-form{
-    display: flex;
-    flex-direction: column;
-    padding: 1em;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    border: solid;
-    border-color: #306BAC;
+
+.login-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 320px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-bottom: 30vh;
+  padding: 1em;
+}
+
+.login-form *{
     font-size: 1.5em;
 }
 
-.login-form .login-input input{
-    border-radius: .3em;
-    border: solid;
-    border-width: .1em;
-    padding-left: 5px;
-    font-size: 1em;
+.login-form .sub-title{
+    font-size: 1.5em;
+    font-weight: bold;
+    color: rgb(43, 76, 119);
 }
 
-.login-form button{
-    margin-top: .5em;
-    font-size: 1em;
-    background-color: #fff;
-    border: solid;
-    border-color: #88CCF1;
-    border-radius: .3em;
+.login-form input{
+    margin: .5em;
+    padding: .3em;
+    width: 75%;
+    border: rgb(43, 76, 119) .1em solid;
+    border-radius: .1em;
 }
-
-.login-form button:hover{
+.login-form input[type=submit]{
+    font-weight: bold;
+    width: 75%;
+    color:white;
+    border-color: rgb(43, 122, 189);
+    background-color: rgb(43, 76, 119);
+}
+.login-form input[type=submit]:hover{
+    color: white;
+    background-color: rgb(72, 122, 189);
+    transition: 500ms;
     cursor: pointer;
-    background-color: whitesmoke;
-    color: #306BAC;
 }
 
-.login-form a{
-    font-size: .8em;
-    padding-left: .5em;
-}
-
-.error-message{
-    color: red;
-    font-size: .8em;
+.login-form input:focus{
+    outline: none;
 }
