--- a/PlayGround/ClientApp/src/app/login/login.component.html
+++ b/PlayGround/ClientApp/src/app/login/login.component.html
@@ -1,18 +1,9 @@
-<div class="content">
-    <form (ngSubmit)="onSubmit();" class="login-form">
-      <div class="login-input">
-        <div>Account:</div>
-        <input #account name="account" [(ngModel)]="user.account">
-      </div>
-      
-      <div class="login-input">
-        <div>Password:</div>
-        <input #pwd name="pwd" [(ngModel)]="user.password">
-      </div>
-      <div *ngIf="error" class="error-message">帳號或密碼輸入錯誤</div>
-      <div class="btn-area">
-        <button type="submit">Submit</button>
-        <a [routerLink]="[ '/signUp']">SignUp</a>
-      </div>
-    </form>
+<div class="login-component">
+  <form (ngSubmit)="onSubmit();" class="login-form">
+    <div class="sub-title">Login</div>
+    <input name="account" type="text" [(ngModel)]="user.account" placeholder="帳號">
+    <input name= "password" type="password" [(ngModel)]="user.password" placeholder="密碼">
+    <div *ngIf="error" class="error-message">帳號或密碼輸入錯誤</div>
+    <input type="submit" value="登入">
+  </form>
 </div>
